@@ -1,4 +1,5 @@
 0.5.0
+* rgx: new module (Regular Expression) (2007-05-10)
 * nfe: new module (Non-deterministic finite automate state) (2007-05-08)
 * nfs: new module (Non-deterministic finite automata state) (2007-05-07)
 * minForth config.fs/make/fs added
